# dataprocessing-ai

./: .gitignore  LICENSE  README.md  api.py  mcp_server.py  pyproject.toml  requirements.txt
dataprocessing/analyse/: __init__.py
dataprocessing/clean/: __init__.py
dataprocessing/ingest/: __init__.py
dataprocessing/transform/: __init__.py
tests/: test_analyse.py  test_api.py  test_clean.py  test_ingest.py  test_transform.py
