[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprocessing"
version = "0.1.0"
description = "AI-native data processing library — REST API, MCP server, and Python package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "oluwagbemilesi"}
]
keywords = ["data", "processing", "AI", "REST", "MCP", "pandas"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "pyarrow>=15.0.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.6.0",
  "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dataprocessing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
